test(e2e): add Playwright config and rewards e2e with mock chain

--- a/.env.example
+++ b/.env.example
@@ -1,41 +1,10 @@
-# Frontend Environment Variables
-NEXT_PUBLIC_CHAIN_ID=56
-NEXT_PUBLIC_RPC_URL=https://bsc-dataseed.binance.org/
-NEXT_PUBLIC_TESTNET_RPC=https://data-seed-prebsc-1-s1.binance.org:8545/
-NEXT_PUBLIC_WALLETCONNECT_PROJECT_ID=your_project_id
-NEXT_PUBLIC_APP_URL=http://localhost:3000
-
-# Backend Environment Variables
-MONGODB_URI=mongodb://localhost:27017/ufo-invasions
-REDIS_URL=redis://localhost:6379
-JWT_SECRET=your_jwt_secret_key
-SESSION_SECRET=your_session_secret
-
-# API Keys
-PANCAKESWAP_API_KEY=your_pancakeswap_api_key
-BSCSCAN_API_KEY=your_bscscan_api_key
-TWITTER_API_KEY=your_twitter_api_key
-TELEGRAM_BOT_TOKEN=your_telegram_bot_token
-
-# Smart Contract Deployment
-BSC_PRIVATE_KEY=your_private_key_for_deployment
-BSC_TESTNET_PRIVATE_KEY=your_testnet_private_key
-
-# Contract Addresses (will be filled after deployment)
-UFO_BADGE_CONTRACT=
-UFO_TOKEN_CONTRACT=
-LEADERBOARD_CONTRACT=
-AIRDROP_CONTRACT=
-
-# Four.meme Integration
-FOUR_MEME_API_KEY=your_four_meme_api_key
-FOUR_MEME_WEBHOOK_SECRET=your_webhook_secret
-
-# Email & Notifications
-SENDGRID_API_KEY=your_sendgrid_api_key
-FROM_EMAIL=noreply@ufoinvasions.com
-
-# Development
-NODE_ENV=development
-PORT=3000
-API_PORT=3001
+REACT_APP_CONTRACT_ADDRESS=0xYourContractAddress
+REACT_APP_CHAIN_ID=56
+REACT_APP_RPC_URL=https://bsc-dataseed.binance.org
+REACT_APP_CHAIN_NAME=BSC
+REACT_APP_NATIVE_NAME=BNB
+REACT_APP_NATIVE_SYMBOL=BNB
+REACT_APP_EXPLORER_URL=https://bscscan.com
+REACT_APP_API_BASE_URL=
+REACT_APP_TX_CONFIRMATIONS=2
+REACT_APP_E2E_MOCK_CHAIN=0
