--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ufo-invasions-pump-tokens",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "🛸 UFO Invasions: Pump Tokens - Blockchain gaming platform on BNB Chain with mission system",
   "private": true,
   "scripts": {
@@ -12,6 +12,8 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
+    "e2e": "playwright test",
+    "e2e:ui": "playwright test --ui",
     "compile:contracts": "hardhat compile",
     "deploy:testnet": "hardhat run scripts/deploy.ts --network bscTestnet",
     "deploy:mainnet": "hardhat run scripts/deploy.ts --network bscMainnet",
@@ -24,6 +26,7 @@
     "@tanstack/react-query": "^5.0.0",
     "axios": "^1.6.0",
     "clsx": "^2.0.0",
+    "ethers": "^5.7.2",
     "framer-motion": "^10.16.0",
     "mongodb": "^6.3.0",
     "next": "14.0.0",
@@ -42,6 +45,10 @@
     "@hardhat/ethers": "^3.0.0",
     "@hardhat/hardhat-toolbox": "^4.0.0",
     "@nomicfoundation/hardhat-verify": "^2.0.0",
+    "@playwright/test": "^1.48.2",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.1",
+    "@testing-library/user-event": "^14.5.2",
     "@types/jest": "^29.5.0",
     "@types/node": "^20.8.0",
     "@types/react": "^18.2.0",
@@ -49,6 +56,7 @@
     "@typescript-eslint/eslint-plugin": "^6.9.0",
     "@typescript-eslint/parser": "^6.9.0",
     "autoprefixer": "^10.4.0",
+    "cross-env": "^7.0.3",
     "eslint": "^8.52.0",
     "eslint-config-next": "14.0.0",
     "eslint-config-prettier": "^9.0.0",
@@ -56,6 +64,7 @@
     "hardhat": "^2.19.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "msw": "^2.3.2",
     "postcss": "^8.4.0",
     "prettier": "^3.0.0",
     "tailwindcss": "^3.3.0",
