⚙️ Vercel Configuration + Environment Setup + Database Initialization

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,37 @@
-REACT_APP_CONTRACT_ADDRESS=0xYourContractAddress
+# MongoDB Configuration (get from Vercel MongoDB Atlas integration)
+# https://vercel.com/integrations/mongodb-atlas
+MONGODB_URI=mongodb+srv://username:password@cluster0.mongodb.net/ufo_invasions_db?retryWrites=true&w=majority
+
+# App Configuration
+NEXT_PUBLIC_APP_URL=https://your-app.vercel.app
+WEBHOOK_SECRET=your-webhook-secret-here
+
+# Blockchain Configuration
+REACT_APP_CONTRACT_ADDRESS=0x7650a9c4543473cb0d1c73de441360bb92374444
 REACT_APP_CHAIN_ID=56
-REACT_APP_RPC_URL=https://bsc-dataseed.binance.org
-REACT_APP_CHAIN_NAME=BSC
-REACT_APP_NATIVE_NAME=BNB
-REACT_APP_NATIVE_SYMBOL=BNB
+REACT_APP_RPC_URL=https://bsc-dataseed.binance.org/
 REACT_APP_EXPLORER_URL=https://bscscan.com
-REACT_APP_API_BASE_URL=
-REACT_APP_TX_CONFIRMATIONS=2
-REACT_APP_E2E_MOCK_CHAIN=0
+
+# Optional: Social Media Integration
+TWITTER_BEARER_TOKEN=
+DISCORD_BOT_TOKEN=
+TELEGRAM_BOT_TOKEN=
+
+# Optional: External Services
+COINGECKO_API_KEY=
+FOUR_MEME_API_KEY=
+
+# Development Settings
+NEXT_PUBLIC_DEBUG_MODE=false
+REACT_APP_E2E_MOCK_CHAIN=false
+DISABLE_AGENT_AUTO_TRIGGER=false
+
+# Vercel Analytics (optional)
+NEXT_PUBLIC_VERCEL_ANALYTICS_ID=
+
+# Agent Configuration
+AGENT_EXECUTION_INTERVAL=240000
+MAX_REWARDS_PER_EXECUTION=25
+MAX_MISSIONS_PER_EXECUTION=30
+BEAM_COOLDOWN_HOURS=1
+REWARD_EXPIRY_HOURS=48
