--- a/package.json
+++ b/package.json
@@ -17,18 +17,25 @@
     "compile:contracts": "hardhat compile",
     "deploy:testnet": "hardhat run scripts/deploy.ts --network bscTestnet",
     "deploy:mainnet": "hardhat run scripts/deploy.ts --network bscMainnet",
-    "verify:contracts": "hardhat verify --network bscTestnet"
+    "verify:contracts": "hardhat verify --network bscTestnet",
+    "db:init": "node scripts/init-mvp-database.js",
+    "db:test": "node scripts/test-db-connection.js",
+    "agents:run": "node scripts/run-agents-local.js"
   },
   "dependencies": {
     "@next/font": "^14.0.0",
     "@reown/appkit": "^1.0.0",
     "@reown/appkit-adapter-wagmi": "^1.0.0",
     "@tanstack/react-query": "^5.0.0",
+    "@vercel/analytics": "^1.0.0",
     "axios": "^1.6.0",
     "clsx": "^2.0.0",
+    "date-fns": "^2.29.0",
     "ethers": "^5.7.2",
     "framer-motion": "^10.16.0",
+    "js-cookie": "^3.0.5",
     "mongodb": "^6.3.0",
+    "nanoid": "^5.0.0",
     "next": "14.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -50,6 +57,7 @@
     "@testing-library/react": "^14.2.1",
     "@testing-library/user-event": "^14.5.2",
     "@types/jest": "^29.5.0",
+    "@types/js-cookie": "^3.0.3",
     "@types/node": "^20.8.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
@@ -57,6 +65,7 @@
     "@typescript-eslint/parser": "^6.9.0",
     "autoprefixer": "^10.4.0",
     "cross-env": "^7.0.3",
+    "dotenv": "^16.3.0",
     "eslint": "^8.52.0",
     "eslint-config-next": "14.0.0",
     "eslint-config-prettier": "^9.0.0",
@@ -85,7 +94,12 @@
     "crypto",
     "meme-tokens",
     "pancakeswap",
-    "four-meme"
+    "four-meme",
+    "mongodb",
+    "vercel",
+    "agents",
+    "missions",
+    "rewards"
   ],
   "author": {
     "name": "George Pricop",
@@ -100,5 +114,5 @@
   "bugs": {
     "url": "https://github.com/Gzeu/ufo-invasions-pump-tokens/issues"
   },
-  "homepage": "https://ufo-token-landing.vercel.app/"
+  "homepage": "https://ufo-invasions-pump-tokens.vercel.app/"
 }
