🔧 Fix cron jobs for Hobby plan - daily execution only
- Change orchestrator from every 4 hours to daily at midnight
- Remove reward-processor cron (too frequent for Hobby)
- Combine functionality in single daily orchestrator run
- Hobby plan allows max 1 daily cron job

--- a/vercel.json
+++ b/vercel.json
@@ -17,11 +17,8 @@
   "crons": [
     {
       "path": "/api/agents/orchestrator",
-      "schedule": "0 */4 * * *"
-    },
-    {
-      "path": "/api/agents/reward-processor",
-      "schedule": "*/15 * * * *"
+      "schedule": "0 0 * * *",
+      "comment": "Daily orchestrator run at midnight UTC - Hobby plan compatible"
     }
   ],
   "headers": [
