Fix vercel.json: Remove comment field for Hobby plan compatibility
Fixes #14 - Vercel Hobby plan doesn't support comment field in crons

--- a/vercel.json
+++ b/vercel.json
@@ -17,8 +17,7 @@
   "crons": [
     {
       "path": "/api/agents/orchestrator",
-      "schedule": "0 0 * * *",
-      "comment": "Daily orchestrator run at midnight UTC - Hobby plan compatible"
+      "schedule": "0 0 * * *"
     }
   ],
   "headers": [
