--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ufo-invasions-pump-tokens",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "🛸 UFO Invasions: Pump Tokens - Blockchain gaming platform on BNB Chain with mission system",
   "private": true,
   "scripts": {
@@ -20,7 +20,9 @@
     "verify:contracts": "hardhat verify --network bscTestnet",
     "db:init": "node scripts/init-mvp-database.js",
     "db:test": "node scripts/test-db-connection.js",
-    "agents:run": "node scripts/run-agents-local.js"
+    "agents:run": "node scripts/run-agents-local.js",
+    "health:check": "curl -f http://localhost:3000/api/health || exit 1",
+    "monitor": "node scripts/monitor-system.js"
   },
   "dependencies": {
     "@next/font": "^14.0.0",
@@ -49,8 +51,8 @@
     "zustand": "^4.4.0"
   },
   "devDependencies": {
-    "@hardhat/ethers": "^3.0.0",
-    "@hardhat/hardhat-toolbox": "^4.0.0",
+    "@nomicfoundation/hardhat-ethers": "^3.0.0",
+    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "@nomicfoundation/hardhat-verify": "^2.0.0",
     "@playwright/test": "^1.48.2",
     "@testing-library/jest-dom": "^6.4.2",
@@ -99,7 +101,10 @@
     "vercel",
     "agents",
     "missions",
-    "rewards"
+    "rewards",
+    "error-handling",
+    "monitoring",
+    "resilience"
   ],
   "author": {
     "name": "George Pricop",
