--- a/package.json
+++ b/package.json
@@ -14,15 +14,10 @@
     "test:coverage": "jest --coverage",
     "e2e": "playwright test",
     "e2e:ui": "playwright test --ui",
-    "compile:contracts": "hardhat compile",
-    "deploy:testnet": "hardhat run scripts/deploy.ts --network bscTestnet",
-    "deploy:mainnet": "hardhat run scripts/deploy.ts --network bscMainnet",
-    "verify:contracts": "hardhat verify --network bscTestnet",
     "db:init": "node scripts/init-mvp-database.js",
     "db:test": "node scripts/test-db-connection.js",
     "agents:run": "node scripts/run-agents-local.js",
-    "health:check": "curl -f http://localhost:3000/api/health || exit 1",
-    "monitor": "node scripts/monitor-system.js"
+    "health:check": "curl -f http://localhost:3000/api/health || exit 1"
   },
   "dependencies": {
     "@next/font": "^14.0.0",
@@ -33,7 +28,7 @@
     "axios": "^1.6.0",
     "clsx": "^2.0.0",
     "date-fns": "^2.29.0",
-    "ethers": "^5.7.2",
+    "ethers": "^6.14.0",
     "framer-motion": "^10.16.0",
     "js-cookie": "^3.0.5",
     "mongodb": "^6.3.0",
@@ -42,9 +37,6 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
-    "redis": "^4.6.0",
-    "socket.io": "^4.7.0",
-    "socket.io-client": "^4.7.0",
     "tailwind-merge": "^2.0.0",
     "viem": "^2.0.0",
     "wagmi": "^2.0.0",
@@ -53,7 +45,6 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-ethers": "^3.0.0",
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
-    "@nomicfoundation/hardhat-verify": "^2.0.0",
     "@playwright/test": "^1.48.2",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.2.1",
@@ -75,7 +66,6 @@
     "hardhat": "^2.19.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "msw": "^2.3.2",
     "postcss": "^8.4.0",
     "prettier": "^3.0.0",
     "tailwindcss": "^3.3.0",
@@ -94,17 +84,11 @@
     "nft",
     "web3",
     "crypto",
-    "meme-tokens",
-    "pancakeswap",
-    "four-meme",
     "mongodb",
     "vercel",
     "agents",
     "missions",
-    "rewards",
-    "error-handling",
-    "monitoring",
-    "resilience"
+    "rewards"
   ],
   "author": {
     "name": "George Pricop",
