--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "e2e:ui": "playwright test --ui",
     "db:init": "node scripts/init-mvp-database.js",
     "db:test": "node scripts/test-db-connection.js",
+    "seed": "tsx scripts/seed-missions.ts",
     "agents:run": "node scripts/run-agents-local.js",
     "health:check": "curl -f http://localhost:3000/api/health || exit 1"
   },
@@ -32,6 +33,7 @@
     "framer-motion": "^10.16.0",
     "js-cookie": "^3.0.5",
     "mongodb": "^6.3.0",
+    "mongoose": "^8.0.0",
     "nanoid": "^5.0.0",
     "next": "14.0.0",
     "react": "^18.2.0",
@@ -70,6 +72,7 @@
     "prettier": "^3.0.0",
     "tailwindcss": "^3.3.0",
     "ts-jest": "^29.1.0",
+    "tsx": "^4.7.0",
     "typescript": "^5.2.0"
   },
   "engines": {
